2012-09-09  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-insert-file)
	(mime-edit-insert-file-as-text): Minor refactoring.

2012-09-08  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-insert-text-file)
	(mime-edit-insert-file-as-text): New functions.
	(mime-edit-mode-entity-map, mime-edit-menu-list, mime-edit-mode):
	Add entry for mime-edit-insert-file-as-text.

2012-09-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-insert-file-filename)
	(mime-edit-insert-file-charset)
	(mime-edit-insert-file-parameters): New functions.
	(mime-edit-insert-file): Use them.  Capable to define charset
	while inserting.
	(mime-file-types): Define charset parameter for text files.

2012-09-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-normalize-body): Define charset more
	exactly for encoded text entity.

2012-08-25  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-display-text/plain): Minor refactoring.
	(mime-display-text/richtext, mime-display-text/enriched): Do not
	use `let'.

2012-08-25  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-display-insert-text-content): New function.
	(mime-display-text/plain, mime-display-text/richtext)
	(mime-display-text/enriched): Use it.

2012-04-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: Fix the case of that
	mime-setup-enable-inline-html is nil.

	* mime-shr.el (mime-shr-preview-text/html): Delete garbage
	overlay.

2012-04-28  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.ja, README.en: Remove descriptions about CVS and add
	description about the new Git repository.

2012-04-28  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.ja, README.en (Required environment): Modify for the new
	URLs of APEL and FLIM.
	(Mailing lists): Modify for the new Emacs-MIME mailing lists.

2010-11-12  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* semi-setup.el: Add setting for mime-mac.el if running with Mac
	OS X.
